sandbox-codebase/objects/Opportunity/fields/Backlog__c.field-meta.xml
<CustomField>
    <fullName>Backlog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the customer have a backlog?  Consider adding the reason to the description.</description>
    <label>Backlog?</label>
    <type>Checkbox</type>
</CustomField>