sandbox-codebase/objects/Opportunity/fields/Current_Product__c.field-meta.xml
<CustomField>
    <fullName>Current_Product__c</fullName>
    <label>Current Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WatchPAT, WatchPAT Direct, WatchPAT 300, Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>