sandbox-codebase/objects/Opportunity/fields/Current_testing_volume__c.field-meta.xml
<CustomField>
    <fullName>Current_testing_volume__c</fullName>
    <description>How many tests per month does the customer currently conduct?</description>
    <label>Current monthly test volume</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>