sandbox-codebase/objects/Opportunity/fields/EMR__c.field-meta.xml
<CustomField>
    <fullName>EMR__c</fullName>
    <label>EMR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EPIC, Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>