sandbox-codebase/objects/Opportunity/fields/heymarket__E164_Phone__c.field-meta.xml
<CustomField>
    <fullName>heymarket__E164_Phone__c</fullName>
    <formula>Account.heymarket__E164_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E164 Phone</label>
    <type>Text</type>
</CustomField>