sandbox-codebase/objects/Opportunity/fields/heymarket__Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To show the number is opt out or not</description>
    <label>Opt Out</label>
    <type>Checkbox</type>
</CustomField>