sandbox-codebase/objects/Opportunity/fields/Mogli_SMS__Default_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Default_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Gateway</label>
    <referenceTo>Mogli_SMS__Gateway__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>