sandbox-codebase/objects/Opportunity/fields/Other_integrations_required__c.field-meta.xml
<CustomField>
    <fullName>Other_integrations_required__c</fullName>
    <label>Other integrations required?</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>