sandbox-codebase/objects/Opportunity/fields/Pain_points__c.field-meta.xml
<CustomField>
    <fullName>Pain_points__c</fullName>
    <description>Briefly describe the potential customer&apos;s pain points</description>
    <label>Pain points</label>
    <length>1300</length>
    <type>Html</type>
</CustomField>