sandbox-codebase/objects/Opportunity/fields/Potential_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Potential_Revenue__c</fullName>
    <formula>Price__c *  Tests_per_month__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>