sandbox-codebase/objects/Opportunity/fields/Somnoware_integration_required__c.field-meta.xml
<CustomField>
    <fullName>Somnoware_integration_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Somnoware integration required?</label>
    <type>Checkbox</type>
</CustomField>