sandbox-codebase/objects/Opportunity/fields/Tests_per_month__c.field-meta.xml
<CustomField>
    <fullName>Tests_per_month__c</fullName>
    <label>Tests per month</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>