sandbox-codebase/objects/Opportunity/fields/X90_volume_date__c.field-meta.xml
<CustomField>
    <fullName>X90_volume_date__c</fullName>
    <label>90% volume date</label>
    <type>Date</type>
</CustomField>